Update 75th Week-Of Copy

--- a/content/75.md
+++ b/content/75.md
@@ -9,20 +9,14 @@ menu:
   footer:
     weight: 4
 ---
-Friends of DramaTech will host an alumni weekend April 21-23, 2023, celebrating DramaTech's 75th Anniversary. Join us in Atlanta for a weekend of events where you will interact with old friends, learn what's going on at the theater, and see DramaTech's spring musical, RENT.
-
-## RSVP and Tickets
-Your 75th Anniversary Alumni Weekend ticket is $80 and includes Saturday lunch, a ticket to see RENT at DramaTech on Saturday night, and Sunday brunch. You do not need to buy a separate ticket to see the show.
-
-Registration for the alumni weekend will close on April 7th.
-
-<br/>
-<a class="large-button" href="https://friendsofdt.square.site/" target="_new">RSVP Here</a>
+It’s almost here – the 75th Anniversary Alumni Weekend starts this Friday night!
 
 ## Schedule
 ### Friday, April 21 2023
 #### 7:00 pm - Friday Night Cocktail Reception
-Location TBA
+[Rocky Mountain Pizza, Back Patio](https://www.google.com/maps/place/Rocky+Mountain+Pizza+Company/@33.7820219,-84.40692,17z/data=!3m1!4b1!4m6!3m5!1s0x88f504f2d75b8897:0xbcea26c836d97ffc!8m2!3d33.7820175!4d-84.4043451!16s%2Fg%2F1tfh5hj1)
+
+_For those in the north metro suburbs, [Kettlerock Brewing](https://kettlerockbrewing.com/), which is owned and operated by two generations of DramaTech alumni, will be hosting a gathering Friday night._
 
 ### Saturday, April 22 2023
 #### 10:00 am - Let’s Try This! Improv Workshop
@@ -34,6 +28,7 @@ Location TBA
 Guest Speakers from DramaTech
 
 #### 3:00 pm - Activities and dinner on your own
+_Tours of DramaTech Available During This Time_
 
 #### 8:00 pm - RENT
 [DramaTech Theatre](https://map.gatech.edu/?id=82#!ct/56246,15646?m/186300?s/?sbc)
@@ -42,13 +37,8 @@ Guest Speakers from DramaTech
 #### 9:00 am - Brunch
 [Northside Room, Georgia Tech Student Center](https://map.gatech.edu/?id=82#!ct/56246,15646?m/598721?s/?sbc/)
 
-## Travel Details
-We're hoping that folks who don't live in Atlanta will consider traveling for this event.
+## RENT Details
+If you have a ticket to the alumni weekend, you already have a ticket to see RENT at DramaTech on Saturday night. We will distribute tickets at lunch on Saturday, and there will be somebody from FoDT in front of the theatre before the show as well. We will have a block of seats together, so look for seats marked for Friends of DramaTech. The lobby opens at 7:00 PM and the house opens at 7:30 PM. If something comes up and you will be unable to attend the show, please let us know at <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#55;&#53;&#116;&#104;&#64;&#102;&#114;&#105;&#101;&#110;&#100;&#115;&#111;&#102;&#100;&#116;&#46;&#111;&#114;&#103;">&#55;&#53;&#116;&#104;&#64;&#102;&#114;&#105;&#101;&#110;&#100;&#115;&#111;&#102;&#100;&#116;&#46;&#111;&#114;&#103;</a> any time up until showtime and we’ll make sure somebody gets to use it.
 
-The most convenient hotel to Georgia Tech is the [Hampton Inn on North Ave](https://www.hilton.com/en/hotels/atlgthx-hampton-atlanta-georgia-tech-downtown/hotel-location/). You can find other options for each of the major hotel rewards programs at [this link](https://docs.google.com/document/d/1qOdz8mpclvKjfFOoXJSmZJsmib2g2Wte5bT3vBGQWlU).
-
-For getting around, we recommend Lyft or Uber, or perhaps renting a car. There is paid parking at the Student Center ([Visitor Area 2 and 3](https://www.pts.gatech.edu/parking/visitor-parking/)). If you’re using an app or need directions, try Georgia Tech Student Center or 351 Ferst Drive NW.
-
-## Share and Enjoy!
-If you know of any DramaTech alumni who might not be on our email list, please feel free to invite them. We'd love to have as many people who were involved with the theater present. They can also get future updates about this sort of thing by email by [joining Friends of DramaTech](https://friendsofdt.org/join).
-
+## Parking and Transportation
+For getting around, we recommend Lyft or Uber, or perhaps renting a car. There is paid parking at the Student Center - we recommend the deck ([Visitor Area 3](https://www.pts.gatech.edu/parking/visitor-parking/)). If you’re using an app or need directions, try searching for “Georgia Tech Student Center Parking” or 353 Ferst Drive NW. If you’re driving, the Student Center visitor parking is a little further up Ferst Drive (towards the rec center) from the Student Center. Cost is $2/hr and is pay-on-exit.
