Add contact info to 75th

--- a/content/75.md
+++ b/content/75.md
@@ -42,3 +42,12 @@ If you have a ticket to the alumni weekend, you already have a ticket to see REN
 
 ## Parking and Transportation
 For getting around, we recommend Lyft or Uber, or perhaps renting a car. There is paid parking at the Student Center - we recommend the deck ([Visitor Area 3](https://www.pts.gatech.edu/parking/visitor-parking/)). If you’re using an app or need directions, try searching for “Georgia Tech Student Center Parking” or 353 Ferst Drive NW. If you’re driving, the Student Center visitor parking is a little further up Ferst Drive (towards the rec center) from the Student Center. Cost is $2/hr and is pay-on-exit.
+
+## Contact Info
+If you need to get in touch with someone about the alumni weekend, you can contact a member of the committee any of the following ways:
+
+Email: <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#55;&#53;&#116;&#104;&#64;&#102;&#114;&#105;&#101;&#110;&#100;&#115;&#111;&#102;&#100;&#116;&#46;&#111;&#114;&#103;">&#55;&#53;&#116;&#104;&#64;&#102;&#114;&#105;&#101;&#110;&#100;&#115;&#111;&#102;&#100;&#116;&#46;&#111;&#114;&#103;</a>
+Slack: [#greenroom](https://fodt.slack.com/archives/C4ZG8L6BA)
+
+We look forward to seeing you in Atlanta! 
+
